working on database for kubernetes

--- a/wfm-postgresql/templates/pv.yaml
+++ b/wfm-postgresql/templates/pv.yaml
@@ -6,7 +6,7 @@ spec:
   accessModes:
     - "ReadWriteOnce"
   capacity:
-    storage: "1Gi"
+    storage: "8Gi"
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /opt/postgresql-openalt
+    path: /opt/wfm-postgresql
