--- a/easy-python-app/frontend/k8s-objects/frontend-ingress.yaml
+++ b/easy-python-app/frontend/k8s-objects/frontend-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: backend-ingress
+  name: frontend-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
@@ -9,7 +9,7 @@ spec:
   - host: minikube
     http:
       paths:
-      - path: "/api/.*"
+      - path: "/app/.*"
         backend:
-          serviceName: backend-service
-          servicePort: 8000
+          serviceName: frontend-service
+          servicePort: 80
