--- a/easy-python-app/database/chart/postgresql-openalt/templates/postgres-service.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/templates/postgres-service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgresql-service
+  name: {{ .Release.Name }}-service
 spec:
   selector:
-    app: postgresql
-  type: NodePort
+    app: {{ .Chart.Name }}
+    name: {{ .Release.Name }}
+  type: {{ .Values.service.type }}
   ports:
     - protocol: TCP
-      port: 5432
+      port: {{ .Values.service.port | default 5432 }}
       targetPort: 5432
-      nodePort: 30543
+      nodePort: {{ .Values.service.nodePort }}
