--- a/easy-python-app/database/chart/postgresql-openalt/templates/postgres-pvc.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/templates/postgres-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresql-data
+  name: {{ .Release.Name }}-data
 spec:
   accessModes:
     - "ReadWriteOnce"
   resources:
     requests:
-      storage: "1Gi"
+      storage: {{ quote .Values.persistence.requests.storage }}
