working on helm charts part

--- a/easy-python-app/database/chart/postgresql-openalt/templates/postgres-secret.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/templates/postgres-secret.yaml
@@ -4,5 +4,7 @@ metadata:
   name: postgres-admin
 type: Opaque
 stringData:
-  db.user: postgres
-  db.pass: admin-pass
+{{- with .Values.AdminAccess }}
+{{ print "db.user: " .user | indent 2 }}
+  db.pass: {{ .password }}
+{{- end }}
