working on helm charts part

--- a/easy-python-app/database/chart/postgresql-openalt/templates/postgres-deployment.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/templates/postgres-deployment.yaml
@@ -34,6 +34,10 @@ spec:
             secretKeyRef:
               name: postgres-admin
               key: db.pass
+        {{- range $envName, $envValue := .Values.envVars }}
+        - name: {{ $envName | upper }}
+          value: {{ $envValue | quote }}
+        {{- end}}
         volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: {{ .Release.Name }}-data  
