working on helm charts part

--- a/easy-python-app/database/chart/postgresql-openalt/templates/postgres-secret.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/templates/postgres-secret.yaml
@@ -4,7 +4,11 @@ metadata:
   name: postgres-admin
 type: Opaque
 stringData:
+{{- $service := .Values.service -}}
 {{- with .Values.AdminAccess }}
-{{ print "db.user: " .user | indent 2 }}
-  db.pass: {{ .password }}
+  db.user: {{ .user }}
+  db.pass: {{ .pass}}
+  {{- if and $service.nodePort (eq $service.type "NodePort") }}
+  db.port: {{ $service.nodePort }}
+  {{- end }}
 {{- end }}
