--- a/easy-python-app/database/chart/postgresql-openalt/values.yaml
+++ b/easy-python-app/database/chart/postgresql-openalt/values.yaml
@@ -18,7 +18,7 @@ service:
 #Database admin access
 AdminAccess:
   user: admin
-  password: admin-pass
+  pass: admin-pass
 
 #Set custom env variables for database container
 envVars:
